# ai-clips-serve

./: .env  .gitignore  Cargo.toml  README.md  api-client-doc.md  backend-api-spec.md  file-upload-guide.md
scripts/: init_db.sql
src/: db.rs  error.rs  main.rs  models.rs  routes.rs  server.rs  services.rs
static/: index.html
static/css/: styles.css
static/js/: main.js
