[package]
name = "ai-clips-serve"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace", "fs", "limit"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
async-trait = "0.1.68"
futures = "0.3.28"
multer = "2.1.0"
bytes = "1.4.0"
mime = "0.3.17"
path-absolutize = "3.1.0"
tokio-util = { version = "0.7.8", features = ["io"] }
# ZIP 文件处理
zip = "0.6.6"
# PostgreSQL 相关依赖
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
dotenv = "0.15.0"
